--- a/src/app/compoents/email-view-dialog/email-view-dialog.html
+++ b/src/app/compoents/email-view-dialog/email-view-dialog.html
@@ -49,11 +49,17 @@
     [innerHTML]="email.body_html">
   </div>
 }@else{
-  <div
+  <!-- <div
     class="flex-1 overflow-y-auto overflow-x-hidden px-5 py-3 max-w-full text-gray-800 text-sm break-words"
     style="height: auto; padding: 35px; word-break: break-word; white-space: pre-wrap;">
     {{ email.body_text }}
-  </div>
+  </div> -->
+
+  <div
+  class="flex-1 overflow-y-auto overflow-x-hidden px-5 py-3 max-w-full text-gray-800 text-sm break-words"
+  style="padding: 35px; word-break: break-word;"
+  [innerHTML]="email.body_text | safeHtmlOrText">
+</div>
 }
 
   </div>
