--- a/src/app/compoents/email-view-dialog/email-view-dialog.html
+++ b/src/app/compoents/email-view-dialog/email-view-dialog.html
@@ -69,7 +69,7 @@
     <div class="flex justify-between items-center">
       <div class="text-xs text-gray-500 flex items-center">
         <lucide-icon name="info" [size]="14" class="mr-1"></lucide-icon>
-        Temporary email
+       <span i18n="@@emailViewDialog.temporaryEmail"> Temporary email</span>
       </div>
     </div>
   </div>
