--- a/src/app/compoents/main-temp-mail/main-temp-mail.html
+++ b/src/app/compoents/main-temp-mail/main-temp-mail.html
@@ -118,7 +118,7 @@
                             }
                             <span class="inline-block w-[52px] text-left">
                                 @if(copied){
-                                <span i18n="@@mainTempMail.copied" >Copied</span>
+                                <span class="truncate" i18n="@@mainTempMail.copied" >Copied</span>
                                 }@else{
                                 <span i18n="@@mainTempMail.copy">Copy</span>
                                 }
@@ -201,7 +201,7 @@
     <div class="px-5 pb-5 bg-white rounded-lg">
         <div class=" border px-4 pt-4 border-gray-200 rounded-lg">
             <div class="flex items-center justify-between mb-4">
-                <h2 class="text-lg font-semibold text-gray-900">Inbox</h2>
+                <h2 class="text-lg font-semibold text-gray-900" i18n="@@mainTempMail.inbox">Inbox</h2>
                 <div class="flex items-center text-sm text-gray-600">
                     <span class="mr-2" i18n="@@mainTempMail.autoRefresh">Auto-refresh in {{ countdown() }}s</span>
                     <button (click)="reload()" class="p-1 text-gray-600 hover:text-gray-900">
