--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -264,11 +264,11 @@
                                 <br><br>
                                 <strong>Need different durations?</strong> We also offer specialized pages for specific
                                 time needs:
-                                <br>• <a href="/10-minutes-temporary-email"
+                                <br>• <a [routerLink]="routes.email10min"
                                     class="text-blue-500 hover:underline">10-minute emails</a> for quick verifications
-                                <br>• <a href="/20-minutes-temporary-email"
+                                <br>• <a [routerLink]="routes.email20min"
                                     class="text-blue-500 hover:underline">20-minute emails</a> for multi-step processes
-                                <br>• <a href="/30-minutes-temporary-email"
+                                <br>• <a [routerLink]="routes.email30min"
                                     class="text-blue-500 hover:underline">30-minute emails</a> for extended
                                 registrations
                             </p>
